# msk

./: PKGBUILD  README.md  compile.bof.sh  main.py  msk.ini  pyproject.toml  traductions.sh
controler/: eol.py  manager.py  pacman.py
i18n/fr/LC_MESSAGES/: msm_applications_fr.ts  msm_fr.ts  msm_hello_fr.ts  msm_kernels_fr.ts  msm_mhwd_fr.ts  msm_mirrors_fr.ts  msm_system_fr.ts  msm_users_fr.ts
model/: kernel.py  manager.py  store.py
modules/_plugin/: base.py
modules/applications/: plugin.py
modules/applications/data/: default.json
modules/applications/ui/: main.py
modules/hello/: plugin.py
modules/hello/ui/: hello.py
modules/kernels/: main.py  plugin.py
modules/kernels/controler/: eol.py  pacman.py
modules/kernels/model/: kernel.py  store.py
modules/kernels/ui/: main.py  window.py
modules/mhwd/: main.py  plugin.py
modules/mirrors/: plugin.py
modules/system/: main.py  plugin.py
modules/users/: plugin.py
modules/users/ui/: test.py
msm-test/: msm-test.desktop
msm-test/modules/_plugin/: base.py
msm-test/modules/applications/ui/: main.py
msm-test/modules/kernels/model/: kernel.py
msm_ng/: __main__.py  msm-test.desktop
msm_ng/modules/_plugin/: base.py
msm_ng/modules/applications/: main.py  plugin.py
msm_ng/modules/hello/: main.py  plugin.py
msm_ng/modules/hello/ui/: hello.py
msm_ng/modules/kernels/: plugin.py
msm_ng/modules/kernels/ui/: main.py
msm_ng/modules/mhwd/: plugin.py
msm_ng/modules/mirrors/: main.py  plugin.py  ui.py
msm_ng/modules/system/: main.py  plugin.py
msm_ng/modules/users/: main.py  plugin.py
msm_ng/modules/users/ui/: test.py
msm_test/: __main__.py  run.sh
msm_test/modules/hello/: main.py
msm_test/modules/kernels/controler/: eol.py
msm_test/modules/kernels/ui/: widgets.py
msm_test/modules/mhwd/: plugin.py
msm_test/modules/mirrors/: main.py
msm_test/modules/users/ui/: widgets.py
ui/: main.py  widgets.py
