[project]
name = "msm-test"
version = "0.9.0"
description = "Manjaro Setting Kernels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyside6>=6.9.0"]

[tool.urls]
repository = "https://github.com/papajoker/msk"

[tool.uv]
environments = ["sys_platform == 'linux'"]

## ------------

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msm-test"]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
include-package-data = true

#[tool.setuptools.packages.find]
#where = ["."]
#exclude = ["tests","_design"]

[tool.setuptools.package-data]
"*" = ["**.json", "**.desktop"]

[tool.uv.workspace]
members = ["packages/*"]

## ------------

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 120

[tool.pylint.main]
disable = ["pointless-string-statement", "no-name-in-module"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# for only QT
attr-naming-style = "any"
method-naming-style = "any"

[tool.pylint.messages_control]
disable = ["fixme", "missing-docstring"]

#[tool.pylint.refactoring]
#never-returning-functions = ["sys.exit"]

#[tool.pylint.miscellaneous]
#notes = ["FIXME", "TODO"]
